<resources>
    <string name="app_name">WB_8_1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_toolbar_title">Dota 2 Heroes</string>
    <string name="attack_type_label">Attack type:</string>
    <string name="attack_type_label_details">Attack type:</string>
    <string name="base_health_label">Base Health:</string>
    <string name="base_mana_label">Base Mana:</string>
    <string name="base_armor_label">Base Armor:</string>
    <string name="base_magic_resistance_label">Base Magic Resistance:</string>
    <string name="damage_label">Damage:</string>
    <string name="attack_range_label">Attack Range:</string>
    <string name="move_speed_label">Move Speed:</string>
    <string name="legs_label">Legs:</string>
    <string name="about_fragment_toolbar_title">About</string>
    <string name="author_label_text">Author:</string>
    <string name="github_label_text">GitHub:</string>
    <string name="date_of_creation_label_text">Date of Creation</string>
    <string name="author_name_text">Лебедь Александр</string>
    <string name="date_of_creation_text">15.06.22</string>
    <string name="github_link">https://github.com/LebedAlIv2601/WB_8_1</string>
    <string name="main_menu_about_title">About</string>
    <string name="error_mesage">Something went wrong! Please, try again</string>
    <string name="try_again_button_text">Try again</string>
</resources>