<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dota_background_image"
    tools:context=".presentation.details.DetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Anti-Mage"
        app:titleTextColor="@color/white" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/hero_image_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar" />

    <ImageView
        android:id="@+id/hero_image_image_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/antimage_big"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/hero_icon_card_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-30dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_image_image_view">

        <ImageView
            android:id="@+id/hero_icon_details_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/antimage" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/hero_image_image_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/hero_name_details_text_view"
                style="@style/header_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Anti-Mage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/str_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/strength_attribute_symbol"
                app:layout_constraintEnd_toStartOf="@+id/agi_icon_image_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hero_name_details_text_view" />

            <ImageView
                android:id="@+id/agi_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:src="@drawable/agility_attribute_symbol"
                app:layout_constraintEnd_toStartOf="@+id/int_icon_image_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/str_icon_image_view"
                app:layout_constraintTop_toTopOf="@+id/str_icon_image_view" />

            <ImageView
                android:id="@+id/int_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intelligence_attribute_symbol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/agi_icon_image_view"
                app:layout_constraintTop_toTopOf="@+id/str_icon_image_view" />

            <TextView
                android:id="@+id/str_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="21 + 1,6"
                app:layout_constraintEnd_toEndOf="@+id/str_icon_image_view"
                app:layout_constraintStart_toStartOf="@+id/str_icon_image_view"
                app:layout_constraintTop_toBottomOf="@+id/str_icon_image_view" />

            <TextView
                android:id="@+id/agi_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24 + 2,8"
                app:layout_constraintEnd_toEndOf="@+id/agi_icon_image_view"
                app:layout_constraintStart_toStartOf="@+id/agi_icon_image_view"
                app:layout_constraintTop_toTopOf="@+id/str_text_view" />

            <TextView
                android:id="@+id/int_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12 + 1,8"
                app:layout_constraintEnd_toEndOf="@+id/int_icon_image_view"
                app:layout_constraintStart_toStartOf="@+id/int_icon_image_view"
                app:layout_constraintTop_toTopOf="@+id/str_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/attack_type_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_type_label_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/attack_type_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Melee"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/attack_type_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/attack_type_label_text_view" />

            <TextView
                android:id="@+id/base_health_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_health_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attack_type_label_text_view" />

            <TextView
                android:id="@+id/base_health_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="200 + 0,25"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/base_health_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/base_health_label_text_view" />

            <TextView
                android:id="@+id/base_mana_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_mana_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/base_health_label_text_view" />

            <TextView
                android:id="@+id/base_mana_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="75 + 0"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/base_mana_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/base_mana_label_text_view" />

            <TextView
                android:id="@+id/base_armor_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_armor_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/base_mana_label_text_view" />

            <TextView
                android:id="@+id/base_armor_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/base_armor_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/base_armor_label_text_view" />

            <TextView
                android:id="@+id/base_mr_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_magic_resistance_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/base_armor_label_text_view" />

            <TextView
                android:id="@+id/base_mr_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="25%"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/base_mr_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/base_mr_label_text_view" />

            <TextView
                android:id="@+id/damage_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/damage_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/base_mr_label_text_view" />

            <TextView
                android:id="@+id/damage_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="29 - 33"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/damage_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/damage_label_text_view" />

            <TextView
                android:id="@+id/attack_range_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/attack_range_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/damage_label_text_view" />

            <TextView
                android:id="@+id/attack_range_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="150"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/attack_range_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/attack_range_label_text_view" />

            <TextView
                android:id="@+id/move_speed_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/move_speed_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attack_range_label_text_view" />

            <TextView
                android:id="@+id/move_speed_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="310"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/move_speed_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/move_speed_label_text_view" />

            <TextView
                android:id="@+id/legs_label_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/legs_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/move_speed_label_text_view" />

            <TextView
                android:id="@+id/legs_text_view"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="2"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/legs_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/legs_label_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>